[package]
name = "miki"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "*"
regex = "*"
uuid = { version = "1.0.0", features = ["v4"] }

[build-dependencies]
lalrpop = { version = "^0.19", features = ["lexer"] }